trafficserver (8.0.3+ds-3) UNRELEASED; urgency=medium

  * Run testsuite with autopkgtest.
  * Set debhelper compatibility level to 12.
  * Add myself to the Uploaders field.
  * Set Standards-Version to 4.4.0.

 -- Emanuele Rocca <ema@debian.org>  Mon, 29 Jul 2019 23:17:55 +0200

trafficserver (8.0.3+ds-2) unstable; urgency=medium

  * Fix hardeing updating 0015-as-needed-fix.patch from Ubuntu

 -- Jean Baptiste Favre <debian@jbfavre.org>  Tue, 26 Mar 2019 08:44:17 +0100

trafficserver (8.0.3+ds-1) unstable; urgency=medium

  * Use secure URI in Homepage field.
  * Re-export upstream signing key without extra signatures.
  * Drop unnecessary dependency on dh-autoconf.
  * New upstream version 8.0.3+ds
  * Patches update for 8.0.3
  * Add as-needed patch from Ubuntu

 -- Jean Baptiste Favre <debian@jbfavre.org>  Mon, 25 Mar 2019 10:29:35 +0100

trafficserver (8.0.2+ds-1) unstable; urgency=medium

  * Disable testing build in d/gitlab-ci.yml
  * Update d/copyright to remove unneeded files when importing upstream release
  * Update upstream GPG keys list
  * New upstream version 8.0.2+ds
  * Patches refresh for 8.0.2
  * Update patch. Add dep3 headers
  * Update d/control. Mark trafficserver-dev architecture all
  * Remove signature from upstream keys. Fix lintian info
  * Move dpkg-maintscript-helper commands to d/trafficserver.maintscript

 -- Jean Baptiste Favre <debian@jbfavre.org>  Wed, 30 Jan 2019 14:45:09 +0100

trafficserver (8.0.1-4) unstable; urgency=medium

  * Add patch and update d/control, d/rules to use system provided yaml-cpp

 -- Jean Baptiste Favre <debian@jbfavre.org>  Fri, 11 Jan 2019 19:07:28 +0100

trafficserver (8.0.1-3) unstable; urgency=medium

  * Add missed experimental plugin certifier
  * Add man pages paths to d/not-installed to avoid too verbose dh_missing list.
    Manpages are compressed before being install. Non-compressed version is in
    turn erroneously detected as not installed.
  * Update patch which has been merged upstream
