@@ -1,0 +1,23 @@
+---
+include: https://salsa.debian.org/salsa-ci-team/pipeline/raw/master/salsa-ci.yml
+
+variables:
+  RELEASE: 'experimental'
+
+build:
+  extends: .build-package
+
+#reprotest:
+#  extends: .test-reprotest
+
+lintian:
+  extends: .test-lintian
+
+autopkgtest:
+  extends: .test-autopkgtest
+
+blhc:
+  extends: .test-blhc
+
+piuparts:
+  extends: .test-piuparts
