@@ -1,6 +1,7 @@
 trafficserver (8.0.3+ds-3) UNRELEASED; urgency=medium
 
-  * Run testsuite with autopkgtest.
+  * Run upstream testsuite with autopkgtest.
+  * Enable CI tests on salsa (see debian/salsa-ci.yml).
   * Set debhelper compatibility level to 12.
   * Add myself to the Uploaders field.
   * Set Standards-Version to 4.4.0.
